packages/scandi-smpagebuilder/src/component/Pagebuilder/components/ProductList/ProductList.scss
.root.product-list {
  display: flex;
  flex-wrap: wrap;
  overflow: hidden;

  .list-title {
    display: flex;
    width: 100%;
    margin-bottom: 15px;
    justify-content: space-between;
  }

  .overall-scroll {
    display: flex;
    width: 100%;
    flex-wrap: nowrap;
    overflow: auto;

    .images {
      width: 30%;
      flex-shrink: 0;
      margin-inline-end: 10px;
      margin-bottom: 35px;
    }

    .ProductCard {
      min-width: 20rem;
      margin-right: 1rem;

      .Image {
        img {
          height: 100%;
          width: auto;
        }
      }

      .TextPlaceholder {
        display: none;
      }
    }
  }
}

